added check for valid data

--- a/kvstore/eclipse_cpp/kvstore/.cproject
+++ b/kvstore/eclipse_cpp/kvstore/.cproject
@@ -68,7 +68,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="src/unittest/UnitTest_RT.cpp|src/KVStore_RT.hpp|src/KVStore_RT.cpp" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="src/unittest/UnitTest_RT.cpp|src/KVStore_RT.cpp|src/KVStore_RT.hpp" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
@@ -116,7 +116,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="src/unittest/UnitTest_RT.cpp|src/KVStore_RT.hpp|src/KVStore_RT.cpp" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="src/unittest/UnitTest_RT.cpp|src/KVStore_RT.cpp|src/KVStore_RT.hpp" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
